# marchingsquares

./: Cargo.toml  marchingsquares.pyi  pyproject.toml
.github/workflows/: CI.yml
python/marchingsquares/: __init__.py  _marchingsquares.pyi
src/: lib.rs
tests/: test_contoursegments.py  test_marchingsquares.py
