[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "marchingsquares"
description = "Marching squares algorithm"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = []

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv.sources]
marchingalgo = { git = "https://github.com/ehmoussi/marchingalgo.git" }

[dependency-groups]
dev = [
    "marchingalgo",
    "pytest",
]
